# yc-libvhost-server

./: .gitignore  CMakeLists.txt  README.md  atomic.h  bio.h  blockdev.c  catomic.h  event.c  event.h  fs.c  logging.h  memlog.c  memmap.c  memmap.h  meson.build  meson_options.txt  objref.h  platform.c  platform.h  queue.h  server.c  server_internal.h  vdev.c  vdev.h  vhost_spec.h  ya.make
.github/workflows/: main.yaml
docs/: vhost-user.txt
include/vhost/: blockdev.h  event.h  fs.h  platform.h  server.h  types.h  vdev.h  vhost_spec.h
include/vhost-server/: blockdev.h  event.h  intrusive_list.h  platform.h  server.h  types.h  vdev.h  vhost_proto.h  virt_queue.h  virtio10.h  virtio_blk.h
include/virtio/: virtio10.h  virtio_blk10.h
subprojects/: libblkio.wrap
tests/: CMakeLists.txt  meson.build  test_libvhost.py  test_utils.h  vhost_user_blk_test_server.c
virtio/: Makefile  virt_queue.c  virt_queue.h  virtio_blk.c  virtio_blk.h  virtio_blk_spec.h  virtio_fs.c  virtio_fs.h  virtio_fs_spec.h  virtio_spec.h  virtio_types.h  ya.make
